--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
 /*header section*/
 .hero_area {
   height: 100vh;
-  background-image: url(../images/hero-bg.jpg);
+  background-image: url(../images/emily-bernal-BM3U_D2lygo-unsplash2.png);
   background-size: cover;
 }
 
